Changes in Release 1.4.5
==============================================
[JOWS-36] - WS-Trust OnBehalfOf provider is misimplemented, should support a sequence of wildcard children rather than a single child.

Changes in Release 1.4.4
==============================================
[JOWS-33] - HttpResource does not properly release HTTP connnections
[JOWS-34] - Update dependencies
[JOWS-35] - Clean up maven assembly description

Changes in Release 1.4.3
==============================================
[JOWS-31] - Failed test on Windows: testGetLocation(org.opensaml.util.resource.FilesystemResourceTest): expected:</...> but was:<C:\...>
[JOWS-32] - Inconsitency in getStatusCode result in HttpServletRequestAdapter

Changes in Release 1.4.2
==============================================
[JOWS-26] - KeyIdentifierMarshaller uses an incorrect attribute name
[JOWS-27] - BaseMessageDecoder logging of protocol messages assumes a DOM
[JOWS-28] - SOAP11Encoder doesn't encode original SOAP message
[JOWS-29] - Some pom changes for OpenWS
[JOWS-30] - Update POM for Shib.net Repo and attach generated Javadocs

Changes in Release 1.4.1
==============================================
[JOWS-23] - Update libs for 1.4.1
[JOWS-24] - StorageServiceSweeper can throw exception, causing the entire TaskTimer to die

Changes in Release 1.4.0
==============================================
[JOWS-15] - AbstractDateTimeType does not handle all datetime formats
[JOWS-20] - Update 3rd party libs for 1.4.0 release
[JOWS-21] - Can we get the Relying Party's certificate data in the log
          - New object provider support for WS-Trust 1.3 specification
          - New object provider support for WS-Policy specification

Changes in Release 1.3.1
==============================================
[JOWS-17] - PropertyReplacementResourceFilter - avoid ClassCast exception due to empty properties file 

Changes in Release 1.3.0
==============================================
[JOWS-6] - Implement SOAP client